// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IsolateTest TestObject constructor 1`] = `
IsolateTest {
  "allowReorder": false,
  "children": null,
  "fieldName": "unicycle",
  "id": "0",
  "key": null,
  "keys": {},
  "message": "I am Root.",
  "parent": null,
  "severity": "error",
  "stateMachine": {
    "getState": [Function],
    "transition": [Function],
  },
  "testFn": [MockFunction],
}
`;

exports[`IsolateTest testObject.warn Should mark the test as warning 1`] = `
IsolateTest {
  "allowReorder": false,
  "children": null,
  "fieldName": "unicycle",
  "id": "102",
  "key": null,
  "keys": {},
  "message": "I am Root.",
  "parent": null,
  "severity": "warning",
  "stateMachine": {
    "getState": [Function],
    "transition": [Function],
  },
  "testFn": [MockFunction],
}
`;
